--- a/App/zh-Hant.lproj/Localizable.strings
+++ b/App/zh-Hant.lproj/Localizable.strings
@@ -68,9 +68,9 @@
 "query_copy_client_name" = "複製用戶端名稱";
 "query_copy_client_ip" = "複製用戶端 IP";
 "query_copy_client_id" = "複製用戶端 ID";
-"query_view_queries_to_hostname" = "View queries to hostname";
-"query_view_queries_from_client" = "View queries to client";
-"query_visit_domain" = "Visit domain";
+"query_view_queries_to_hostname" = "檢視向主機名稱的查詢";
+"query_view_queries_from_client" = "檢視向用戶端的查詢";
+"query_visit_domain" = "訪問網域";
 
 // MARK: Query Detail
 "querydetail_filter_rule" = "過濾規則";
